--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 
+###############################################
+### DATABASE CONNECTIVITY CONFIGURATIONS ###
+###############################################
+database.ip = ${DB_IP:localhost}
+database.port = ${DB_PORT:5432}
+database.user = ${DB_USER:postgres}
+database.password = ${DB_PASSWORD:postgres}
+database.name = ${DB_DBNAME:phoneAgenda}
+
+
+spring.datasource.platform = postgres
+spring.datasource.url = jdbc:postgresql://${database.ip}:${database.port}/${database.name}
+spring.datasource.username = ${database.user}
+spring.datasource.password =  ${database.password}
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.open-in-view = false
+spring.jpa.properties.hibernate.show_sql = true
+
+###############################################
+### EMBEDDED TOMCAT CONFIGURATIONS ###
+###############################################
+server.port=${PORT:8080}
+spring.mail.host=smtp.gmal.com
+spring.mail.port=587
+spring.mail.username=reservationcourt89@gmail.com
+spring.mail.password=qnaufrspirpuruaq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
